--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.4",
-    "mongoose": "^5.3.3"
+    "mongoose": "^5.3.3",
+    "nodemon": "^1.18.5"
   }
 }
